# rag-customer-support

./: .gitignore  README.md  pyproject.toml
configs/: app_config.yaml  data_loader_config.yaml  database_config.yaml  deployment_config.yaml  embedding_config.yaml  lm_config.yaml  md_parser_config.yaml  web_scraper_config.yaml  web_scrapper_config.yaml
data/scraped_documents/: document_1.md  document_1_metadata.yaml  document_2.md  document_2_metadata.yaml  documents.pkl
notebooks/: EDA_web_scraping.ipynb  load_data.ipynb  web_scrapping.ipynb
rag_customer_support/data_collection/: data_loader.py  web_scraper.py
rag_customer_support/notebooks/: web_scrapping.ipynb
rag_customer_support/utils/: __init__.py  config_loader.py  helpers.py  logger.py  markdown_parser.py
scripts/: generate_codebase.py  proj_template.txt  project_structure.py  project_structure_README.md  scraping.py
scripts/generate_codebase_md/: generate_codebase_README.md
tutorials/: helper_functions.py  load_config.py  setting_logger.py
